--- a/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
@@ -347,7 +347,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                <button type="button" id="saveButton2" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
                 <button type="button" class="btn btn-primary" id="confirmPropertyManager">Yes</button>
             </div>
         </div>
@@ -355,6 +355,48 @@
 </div>
 
 <script>
+    const saveButton = document.getElementById('saveButton');
+    const confirmPropertyManagerBtn = document.getElementById('confirmPropertyManager');
+    const noPropertyManagerBtn = document.getElementById('saveButton2');
+
+
+    if (saveButton) {
+        saveButton.addEventListener('click', function (event) {
+            event.preventDefault();
+            const OwnerID = Number(document.getElementById('OwnerId') ? document.getElementById('OwnerId').value : '0');
+            if (!OwnerID || OwnerID <= 0) {
+                debugger;
+                $('#propertyManagerModal').modal('show');
+            } else {
+                checkValidationsAndSubmit();
+            }
+        });
+    }
+
+
+    noPropertyManagerBtn.addEventListener('click', function () {
+        $('#propertyManagerModal').modal('hide');
+        submitTenantForm();
+    });
+
+
+    confirmPropertyManagerBtn.addEventListener('click', async function () {
+        $('#propertyManagerModal').modal('hide');
+        const firstName = document.getElementById('FirstName').value;
+        const lastName = document.getElementById('LastName').value;
+        const email = document.getElementById('EmailAddress').value;
+        const password = document.getElementById('managerPassword').value;
+
+        if (password === "") {
+            alert("Please enter a password for the property manager.");
+            return;
+        }
+
+        const role = 'Property Manager';
+        await submitRegistration(firstName, lastName, email, password, role);
+    });
+
+
 
     document.addEventListener('DOMContentLoaded', function () {
         const OwnerID = Number('@Model?.OwnerId');
@@ -445,7 +487,7 @@
                 return true;
             }
         }
-      
+
         function validateField(field, validatorFunc, errorMessage) {
             if (!validatorFunc(field.value)) {
                 showError(errorMessage);
@@ -501,12 +543,7 @@
             const isRegionValid = validateField(Region, validateRegion, 'Region cannot be empty.');
             const isPostalCodeValid = validateField(PostalCode, validatePostalCode, 'PostalCode cannot be empty.');
             if (isEmailAddressValid && isPhoneNumberValid && isWebsiteValid && isAddressValid && isEmail2Valid && isFirstNameValid && isLastNameValid && isUnitValid && isRegionValid && isPostalCodeValid) {
-
-                if (!OwnerID || OwnerID <= 0) {
-                    $('#propertyManagerModal').modal('show');
-                } else {
-                    submitTenantForm();
-                }
+                submitTenantForm();
             } else {
                 console.error("Validation errors present. Cannot submit form.");
             }
@@ -517,6 +554,19 @@
         if (saveButton) {
             saveButton.addEventListener('click', function (event) {
                 event.preventDefault();
+                const OwnerID = Number('@Model?.OwnerId');
+                if (!OwnerID || OwnerID <= 0) {
+                    $('#propertyManagerModal').modal('show');
+                } else {
+                    checkValidationsAndSubmit();
+                }
+            });
+        }
+
+        if (saveButton2) {
+            saveButton2.addEventListener('click', function (event) {
+                event.preventDefault();
+                $('#propertyManagerModal').modal('hide');
                 checkValidationsAndSubmit();
             });
         }
@@ -580,10 +630,6 @@
         });
     }
 
-</script>
-
-
-<script>
     document.addEventListener('DOMContentLoaded', function () {
         const pictureInput = document.getElementById('PictureUrl');
         const profileImage = document.querySelector('.img-account-profile2');
@@ -625,82 +671,41 @@
         window.location.href = '/Landlord/Download?id=' + id;
     }
 
-
-    document.addEventListener('DOMContentLoaded', function () {
-   
-        document.querySelector('.btn-secondary').addEventListener('click', function () {
-
-            document.getElementById('tenantForm').submit();
-            $('#propertyManagerModal').modal('hide');
-
-        });
-   
-
-        const ownerId = '@Model?.OwnerId';
-        const saveButton = document.getElementById('saveButton');
-
-        if (!ownerId) { // Add case
-            saveButton.addEventListener('click', function (event) {
-                event.preventDefault();
-
-                $('#propertyManagerModal').modal('show');
-            });
-
-            document.getElementById('confirmPropertyManager').addEventListener('click', function () {
-                debugger;
-                var firstName = document.getElementById('FirstName').value;
-                var lastName = document.getElementById('LastName').value;
-                var email = document.getElementById('EmailAddress').value;
-                var password = document.getElementById('managerPassword').value;
-
-                if (password === "") {
-                    alert("Please enter a password for the property manager.");
-                    return;
-                }
-                var role = 'PropertyManager';
-                var formData = new FormData();
-                formData.append('Name', firstName + ' ' + lastName);
-                formData.append('Email', email);
-                formData.append('Password', password);
-                formData.append('UserName', email);
-                formData.append('Role', role);
-
-                submitRegistration(formData);
-            });
-
-        } else {
-            saveButton.addEventListener('click', function (event) {
-                event.preventDefault();
-                checkValidationsAndSubmit();
-            });
-        }
-
-        $('.btn-secondary').on('click', function () {
+    async function submitRegistration(firstName, lastName, email, password, role) {
+        const formDataJsonString = JSON.stringify({
+            Name: `${firstName} ${lastName}`,
+            Email: email,
+            Password: password,
+            UserName: email,
+            Role: role
         });
 
-        function submitRegistration(formData) {
-            debugger;
-            $.ajax({
-                url: '/Landlord/Register',
-                type: 'POST',
-                processData: false,
-                contentType: false,
-                body: formData,
-                success: function (response) {
-                    console.log(response);
-                    Swal.fire({ icon: 'success', title: 'Registered Successfully', showConfirmButton: false, timer: 1500 });
-                    window.location.href = "/Auth/Login";
+        try {
+            const response = await fetch('/Landlord/Register', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Accept': 'application/json'
                 },
-                error: function (xhr, status, error) {
-                    console.error(xhr.responseText);
-                    Swal.fire({ icon: 'error', title: 'Registration Failed', text: 'Please try again!' });
-                }
+                body: formDataJsonString
             });
-            $('#propertyManagerModal').modal('hide');
-        }
 
-        function checkValidationsAndSubmit() {
-
+            if (response.ok) {
+                const jsonResponse = await response.json();
+                console.log(jsonResponse);
+                Swal.fire('Registered Successfully', '', 'success');
+                window.location.href = '/Auth/Login';
+            } else {
+                throw new Error('Something went wrong with the registration process.');
+            }
+        } catch (error) {
+            console.error('Error:', error);
+            Swal.fire('Registration Failed', 'Please try again!', 'error');
         }
-    });
+    }
+
+    function checkValidationsAndSubmit() {
+
+    }
+
 </script>
