--- a/PMS-PropertyHapa.Staff/Views/Lease/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Lease/Index.cshtml
@@ -43,7 +43,7 @@
                                     </svg>
                                     </svg>
                                 </span>
-                                <input class="form-control" type="text" placeholder="Search Assets" id="searchInput" aria-label="search" aria-describedby="basic-addon1">
+                                <input class="form-control" type="text" placeholder="Search Lease" id="searchInput" aria-label="search" aria-describedby="basic-addon1">
                             </div>
                         </div>
                     </div>
