--- a/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
@@ -279,13 +279,13 @@
                                     </ul>
                                 </li>
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="#">
+                                    <a class="sidebar-link sidebar-title" href="@Url.Action("Index","Communication")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg><span>Communication</span>
                                     </a>
-                                    <ul class="sidebar-submenu">
+                                  @*   <ul class="sidebar-submenu">
                                         <li><a href="@Url.Action("SMS","Communication")">Add SMS</a></li>
-                                        <li><a href="@Url.Action("Email","Communication")">Add Email</a></li>
-                                    </ul>
+                                        <li><a href="@Url.Action("Email","Communication")"></a></li>
+                                    </ul> *@
                                 </li>
                                 <li class="sidebar-list">
                                     <a class="sidebar-link sidebar-title" href="#">
